# file_miver

./: CMakeLists.txt  README.md  directory_scanner.cpp  directory_scanner.h  filesystem_worker.cpp  filesystem_worker.h  ftp_worker.cpp  ftp_worker.h  main.cpp  s3_worker.cpp  s3_worker.h  task_params.h  utils.h  vcpkg.json
